# tinygl

./: .gitmodules  CMakeLists.txt
include/tinygl/: bitmask_operators.h  buffer.h  color.h  data_types.h  exceptions.h  input.h  keyboard.h  main.h  mat.h  mouse.h  shader.h  shader_program.h  texture.h  tinygl.h  util.h  vec.h  vertex_array_object.h  window.h
src/: buffer.cpp  shader.cpp  shader_program.cpp  texture.cpp  tinygl.cpp  utils.h  vertex_array_object.cpp  window.cpp
test/: mat_tests.cpp  vec_tests.cpp
